# easyland

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config_examples/: Hyprland.py  Listener.py  Sway.py
src/easyland/: __init__.py  command.py  daemon.py  idle.py  log.py  main.py
